# coursera

./: CMakeLists.txt  README.md
assignment1/mp1/: Application  Grader.sh  MP1Node.cpp  MP1Node.h
assignment1/mp1/testcases/: simplefailure.conf
assignment2/mp2/: MP1Node.cpp  MP2Node.cpp  MP2Node.h
assignment2/mp2/testcases/: create-tiny.conf
